Trying to fix stretched mockup images on mobile devices.

--- a/src/components/Project.scss
+++ b/src/components/Project.scss
@@ -130,10 +130,10 @@
 }
 
 .mockup {
-    height: fit-content;
     img {
+        object-fit: none;
         width: 80em;
-        margin: 1em auto 1em auto;
+        margin: 1em auto 0em auto;
     }
 }
 
@@ -141,6 +141,50 @@
     padding: 2em 0em 3em 0em;
     a {
         font-size: 2em;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+    .project-container {
+        a {
+            font-size: 1em;
+        }
+    }
+    .project-jumbotron {
+        video {
+            margin: 0;
+            top: 0;
+        }
+        .banner {
+            min-height: 20em;
+        }
+        h1 {
+            font-size: 3em;
+        }
+        p {
+            font-size: 2em;
+        }
+        a {
+            font-size: 3em;
+            padding: 0.5em;
+        }
+    }
+    .techstack-wrapper {
+        .svg-inline--fa {
+            font-size: 2.5em !important;
+            margin: 0em 0.5em 0.1em 0.5em;
+        }
+    }
+    .mockup {
+        img {
+            width: 50em;
+        }
+    }
+    .back-btn {
+        padding: 1em 0em 2em 0em;
+        a {
+            font-size: 2em;
+        }
     }
 }
 
@@ -191,49 +235,3 @@
         }
     }
 }
-
-@media (min-width: 768px) and (max-width: 1024px) {
-    .project-container {
-        a {
-            font-size: 1em;
-        }
-    }
-    .project-jumbotron {
-        video {
-            margin: 0;
-            top: 0;
-        }
-        .banner {
-            min-height: 20em;
-        }
-        h1 {
-            font-size: 3em;
-        }
-        p {
-            font-size: 2em;
-        }
-        a {
-            font-size: 3em;
-            padding: 0.5em;
-        }
-    }
-    .techstack-wrapper {
-        .svg-inline--fa {
-            font-size: 2.5em !important;
-            margin: 0em 0.5em 0.1em 0.5em;
-        }
-    }
-    .mockup {
-        img {
-            width: 50em;
-        }
-    }
-    .back-btn {
-        padding: 1em 0em 2em 0em;
-        a {
-            font-size: 2em;
-        }
-    }
-}
-
-  
